--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,29 +13,21 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="referrer" content="origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>BingAI - 聊天</title>
-  <!-- Google tag Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZVJCFLBFRZ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-ZVJCFLBFRZ');
-  </script>
+  <title>赤子英金 BingAI - 聊天</title>
   <!-- Microsoft Clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
       c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
       t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
       y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "kw2cze8oin");
+    })(window, document, "clarity", "script", "mhv1m8qqtm");
   </script>
   <!-- 百度统计 -->
   <script>
     var _hmt = _hmt || [];
     (function () {
       var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?6002068077c49f5ff6fa1c10d4ae55dc";
+      hm.src = "https://hm.baidu.com/hm.js?e60f54c63dd0d09117e75a40b9f7679d";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
