--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,8 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6253158297867597"
+    crossorigin="anonymous"></script>
   <script src="/web/js/bing/chat/global.js"></script>
   <script src="/web/js/bing/chat/amd.js"></script>
   <script src="/web/js/bing/chat/config.js"></script>
