--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,13 +23,6 @@
 
   gtag('config', 'G-090FBQC34B');
 </script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MMWBNPW7');</script>
-  <!-- End Google Tag Manager -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6253158297867597"
      crossorigin="anonymous"></script>
   <!-- Microsoft Clarity -->
@@ -50,6 +43,7 @@
       s.parentNode.insertBefore(hm, s);
     })();
   </script>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "bfcb586c9d3e4d52a19aa6aa5f58fa05"}'></script><!-- End Cloudflare Web Analytics -->
   <script src="/js/bing/chat/global.js"></script>
   <script src="/js/bing/chat/amd.js"></script>
   <script src="/js/bing/chat/config.js"></script>
